# phase2

./: .gitignore  MODULE_ARCHITECTURE.md  QUICKSTART.md  README.md  SCRIPTS.md  SETUP.md  architecture.md  data-sources.md  setup-all.ps1  start-all.ps1  status-all.ps1  status.ps1  stop-all.ps1  test_chat.ps1  uninstall-all.ps1
docs/: COLLECTOR_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  SCRIPTS.md  TEMPERATURE_SETUP.md  WEB_UI_TRAINING_STATUS.md  WHAT_IT_LEARNS.md
docs/guardian/: IMPLEMENTATION_CHECKLIST.md  README.md  USAGE.md
docs/nexus/: IMPLEMENTATION_CHECKLIST.md  README.md  USAGE.md
docs/oracle/: IMPLEMENTATION_CHECKLIST.md  README.md  USAGE.md
docs/sage/: IMPLEMENTATION_CHECKLIST.md  README.md
docs/sentinel/: TROUBLESHOOTING.md  USAGE.md
guardian/: .env.example  .gitignore  config.py  main.py  models.py  pyproject.toml  requirements.txt  setup.ps1  uninstall.ps1
guardian/actions/: __init__.py  base_action.py  process_actions.py  resource_actions.py  system_actions.py
guardian/cli/: __init__.py  main.py
guardian/execution/: __init__.py  executor.py  logger.py
guardian/integration/: __init__.py  oracle_connector.py  sage_connector.py  sentinel_connector.py
guardian/profiles/: __init__.py  gaming.yaml  gaming_profile.py  power_saver.yaml  power_saver_profile.py  profile_manager.py  work.yaml  work_profile.py
guardian/safety/: __init__.py  rollback.py  snapshot.py  validator.py
guardian/tests/: __init__.py  conftest.py  test_actions.py  test_executor.py  test_integration.py  test_profiles.py  test_safety.py
guardian/utils/: __init__.py
nexus/: .env.example  .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.ps1  uninstall.ps1
nexus/api/: __init__.py  chat.py  control.py  metrics.py  patterns.py  status.py  training.py
nexus/cli/: __init__.py  main.py
nexus/static/: __init__.py
nexus/templates/: __init__.py  index.html
nexus/websockets/: __init__.py  metrics_stream.py
old/: Get-SystemStats.ps1
old/phases/: possibilities.md
oracle/: .env.example  .gitignore  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.ps1  uninstall.ps1
oracle/cli/: __init__.py  main.py
oracle/inference/: __init__.py  confidence_calculator.py  explainer.py  pattern_matcher.py  predictor.py
oracle/integration/: __init__.py  model_scheduler.py  sentinel_connector.py
oracle/models/: __init__.py  anomaly_detector.py  base_model.py  classifier.py  clustering.py  lstm_forecaster.py
oracle/patterns/: __init__.py  baseline_manager.py  behavior_profiles.py  correlation_matrix.py  usage_patterns.py
oracle/tests/: __init__.py  conftest.py  test_inference.py  test_models.py  test_patterns.py
oracle/training/: __init__.py  data_loader.py  feature_engineering.py  trainer.py
sage/: .env.example  .gitignore  USAGE.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.ps1  uninstall.ps1
sage/cli/: __init__.py  main.py
sage/context/: __init__.py  context_aggregator.py
sage/conversation/: __init__.py  intent_classifier.py  session_manager.py
sage/feedback/: __init__.py  feedback_collector.py  model_updater.py  preference_learner.py
sage/gemini_client/: __init__.py  client.py  error_handler.py  rate_limiter.py  token_counter.py
sage/insights/: __init__.py  proactive_monitor.py
sage/prompts/: __init__.py  prompt_builder.py  system_prompt.py
sage/tests/: conftest.py  test_client.py  test_conversation.py  test_e2e.py  test_integration.py  test_prompts.py
sentinel/: .env.example  .gitignore  IMPLEMENTATION_CHECKLIST.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  __init__.py  check_temps.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  setup.ps1  setup_aida64.ps1  start-service.ps1  stop-service.ps1  test_basic.py  uninstall.ps1
sentinel/aggregator/: __init__.py  normalizer.py  pipeline.py  queue_manager.py  ring_buffer.py  validator.py
sentinel/cli/: __init__.py  main.py
sentinel/collectors/: __init__.py  aida64_collector.py  base.py  context_collector.py  cpu_collector.py  disk_collector.py  gpu_collector.py  hwinfo_collector.py  network_collector.py  powershell_collector.py  process_collector.py  ram_collector.py  temperature_collector.py  wmi_collector.py
sentinel/patterns/: __init__.py  baseline.py  spike_detector.py  threshold.py
sentinel/storage/: __init__.py  database.py  migrations.py  query_builder.py  repository.py  schema.sql
sentinel/tests/: __init__.py  test_collectors.py  test_models.py  test_patterns.py  test_pipeline.py  test_storage.py
sentinel/tests/fixtures/: sample_data.py
sentinel/tests/integration/: test_end_to_end.py
sentinel/utils/: __init__.py  formatters.py  logger.py  system_utils.py  time_utils.py
